Segunda actualizacion proyecto

--- a/werewolf/Notas.ipynb
+++ b/werewolf/Notas.ipynb
@@ -109,6 +109,82 @@
     "\n",
     "-Haz clic en Send."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Probar la API rest final**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Paso 1: Crear una Partida**\n",
+    "\n",
+    "Solicitud POST para Crear una Partida\n",
+    "\n",
+    "Abre Thunder Client en VSCode.\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas\n",
+    "\n",
+    "-Body: Selecciona JSON y pega el siguiente contenido:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[\"Jugador1\", \"Jugador2\", \"Jugador3\", \"Jugador4\", \"Jugador5\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Obtener los Detalles de una Partida**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: GET\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1 (reemplaza 1 con el id de \n",
+    "la partida que deseas obtener)\n",
+    "\n",
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cambiar la Fase de una Partida**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/fase (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Haz clic en Send."
+   ]
   }
  ],
  "metadata": {
