Ahora ya se eliminan jugadores por votos de aldeanos

--- a/werewolf/Notas.ipynb
+++ b/werewolf/Notas.ipynb
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Probar la API rest final**"
+    "**Probar la API rest segunda version**"
    ]
   },
   {
@@ -182,6 +182,237 @@
     "-Método: POST\n",
     "\n",
     "-URL: http://localhost:8080/api/game/partidas/1/fase (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Votar como Aldeano**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/voto/aldeano?jugadorId=2 (reemplaza 1 con el id de la partida y 2 con el id del jugador votado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PROYECTO FINAL**\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PROBAR LA API CON THUNDER CLIENT (POSTMAN ES UNA OPCION TAMBIEN)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Crear una Partida**\n",
+    "\n",
+    "Abre Thunder Client en VSCode.\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas\n",
+    "\n",
+    "-Body: Selecciona JSON y pega el siguiente contenido:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[\"Jugador1\", \"Jugador2\", \"Jugador3\", \"Jugador4\", \"Jugador5\"]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Obtener los Detalles de una Partida**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: GET\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1 (reemplaza 1 con el id de la partida que deseas obtener)\n",
+    "\n",
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cambiar la Fase de una Partida**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/fase (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Votar como Aldeano**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/voto-aldeano (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Body: Selecciona JSON y pega el siguiente contenido:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\"jugadorId\": 2}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Votar como Lobo**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/voto-lobo (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Body: Selecciona JSON y pega el siguiente contenido:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\"jugadorId\": 3}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Votar como Vidente**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/voto-vidente (reemplaza 1 con el id de la partida)\n",
+    "\n",
+    "-Body: Selecciona JSON y pega el siguiente contenido:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "{\"jugadorId\": 4}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-Haz clic en Send."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Procesar Votos y Eliminar Jugadores**\n",
+    "\n",
+    "Haz clic en New Request.\n",
+    "\n",
+    "Configura la solicitud:\n",
+    "\n",
+    "-Método: POST\n",
+    "\n",
+    "-URL: http://localhost:8080/api/game/partidas/1/procesar-votos\n",
     "\n",
     "-Haz clic en Send."
    ]
